--- a/src/css/modules/_shadow.scss
+++ b/src/css/modules/_shadow.scss
@@ -12,15 +12,7 @@
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.23), 0 3px 10px rgba(0, 0, 0, 0.16);
   }
 
-  &--header {
-    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.23);
-  }
-
-  &--upper {
-    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.23);
-  }
-
-  &--upper-light {
-    box-shadow: 0 -2px 6px rgba(0, 0, 0, 0.03);
+  &__text {
+    text-shadow:3px 3px 0 rgba(0,0,0,0.08);
   }
 }
