--- a/src/css/modules/_wrapper.scss
+++ b/src/css/modules/_wrapper.scss
@@ -1,6 +1,6 @@
 .wrapper {
-  overflow: hidden;
-  max-width: 1100px;
+  // overflow: hidden;
+  max-width: 1000px;
   margin: 0 auto;
-  padding: 0 60px;
+  // padding: 0 60px;
 }
