Add main wrapper, signature and bottom margin

--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -7,3 +7,5 @@ $primary-text-color:   #212121;
 $secondary-text-color: #757575;
 $divider-color:        #dfdfdf;
 $gray-background-color:#f8f8f8;
+
+$body-background-color: #323232;
