--- a/src/css/modules/_wrapper.scss
+++ b/src/css/modules/_wrapper.scss
@@ -1,6 +1,11 @@
 .wrapper {
   // overflow: hidden;
-  max-width: 1000px;
+  max-width: 1200px;
   margin: 0 auto;
   // padding: 0 60px;
+
+  &--inner {
+    max-width: 1000px;
+    margin: 0 auto;
+  }
 }
