Add basic footer layout

--- a/src/css/modules/_row.scss
+++ b/src/css/modules/_row.scss
@@ -1,6 +1,10 @@
 .row {
   display: flex;
 
+  &__center {
+    justify-content: center;
+  }
+
   &__space-between {
     justify-content: space-between;
   }
