Add footer content, icons and styles

--- a/src/css/modules/_row.scss
+++ b/src/css/modules/_row.scss
@@ -5,6 +5,10 @@
     justify-content: center;
   }
 
+  &__center-vertical {
+    align-items: center;
+  }
+
   &__space-between {
     justify-content: space-between;
   }
