--- a/src/css/modules/_footer.scss
+++ b/src/css/modules/_footer.scss
@@ -1,11 +1,28 @@
 .footer {
   color: $primary-color-text;
   background-color: $primary-color;
-  letter-spacing: 2px;
+  font-size: .9rem;
+  letter-spacing: 1px;
 
   &--contact-box {
-    height: 200px;
-    width: 200px;
+    flex-direction: column;
+    height: 180px;
+    width: 280px;
+
+    &__icon {
+      background-color: $primary-color-dark;
+      font-size: 2.5rem;
+      width: 4.5rem;
+      height: 4.5rem;
+      border-radius: 50%;
+      margin-bottom: 1rem;
+      transition: all 0.3s;
+
+      &:hover {
+        transform: scale(1.2);
+        transform: rotate(360deg);
+      }
+    }
   }
 
   &__dark {
