--- a/src/css/modules/_main-nav.scss
+++ b/src/css/modules/_main-nav.scss
@@ -13,7 +13,8 @@
     margin-right: 1.5rem;
     padding: 1rem 0;
     border-bottom: 2px solid $primary-color-dark;
-
+    transition: border-bottom 0.2s;
+  
   &:last-child {
       margin-right: 0;
     }
@@ -25,13 +26,11 @@
 
   li a:link,
   li a:visited {
-    color: #fff;
     text-transform: uppercase;
-    transition: border-bottom 0.2s;
   }
 
   li a:hover,
   li a:active {
-    border-bottom: 2px solid $primary-color-text;
+    // border-bottom: 2px solid $primary-color-text;
   }
 }
