--- a/src/css/base/_global.scss
+++ b/src/css/base/_global.scss
@@ -1,5 +1,6 @@
 body {
-  font-family: 'Roboto', sans-serif;
+  font-family: $main-font, sans-serif;
+  font-weight: 300;
   color: $primary-text-color;
   font-size: 16px;
 }
