--- a/src/css/modules/_large-hero.scss
+++ b/src/css/modules/_large-hero.scss
@@ -10,13 +10,13 @@
 
   &__title {
     font-size: 3rem;
-    font-weight: lighter;
+    font-weight: 300;
     margin: 3rem 0 1rem 0;
   }
 
   &__subtitle {
     font-size: 1.5rem;
-    font-weight: lighter;
+    font-weight: 300;
     margin: 0 0 3rem 0;
   }
 
