Modify z-index to cover shadow from body

--- a/src/css/modules/_footer.scss
+++ b/src/css/modules/_footer.scss
@@ -2,6 +2,8 @@
   color: $primary-color-text;
   background-color: $primary-color;
   letter-spacing: 1px;
+  position: relative;
+  z-index: 100;
 
   &--contact-box {
     flex-direction: column;
