--- a/src/css/modules/_main-nav.scss
+++ b/src/css/modules/_main-nav.scss
@@ -1,6 +1,8 @@
 .main-nav {
   background-color: $primary-color-dark;
   letter-spacing: 2px;
+  position: relative;
+  z-index: 100;
 
   ul {
     padding: 0;
@@ -9,27 +11,21 @@
 
   li {
     list-style: none;
-    margin-right: 1.5rem;
     padding: 1rem 0;
     border-bottom: 2px solid $primary-color-dark;
     transition: border-bottom 0.2s;
-  
-  &:last-child {
-      margin-right: 0;
-    }
 
     &:hover {
       border-bottom: 2px solid $primary-color-text;
     }
   }
 
-  li a:link,
-  li a:visited {
+  a {
+    margin-right: 1.5rem;
     text-transform: uppercase;
-  }
-
-  li a:hover,
-  li a:active {
-    // border-bottom: 2px solid $primary-color-text;
+    
+    &:last-child {
+      margin-right: 0;
+    }
   }
 }
